--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   http: ^0.13.4
   # Reactive stream
   rxdart: ^0.27.3
+  # Architecture
+  flutter_modular: ^4.3.0
+
 
 dev_dependencies:
   flutter_test:
