--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,5 +23,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
 
+  flutter_native_splash: ^1.2.0
+
+flutter_native_splash:
+  color: "#00A0E5"
+  image: assets/splash.png
+  android: true
+  ios: true
+
 flutter:
   uses-material-design: true
